--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ django-heroku = "*"
 dj-database-url = "*"
 pandas = "*"
 django-filter = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7"
