feat: add deps to Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code
+      - .:/app
+      - /Users/luca.romagnoli/Dropbox/RossiRei/:/milaner_dropbox
     ports:
       - "${HOST_PORT}:8000"
     depends_on:
