--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5432:5432"
   web:
-    build: .
+    build: ..
     environment:
       - SECRET_KEY=${SECRET_KEY}
       - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
