--- a/app/Pipfile
+++ b/app/Pipfile
@@ -9,27 +9,21 @@ jupyter = "*"
 pandas = "*"
 
 [packages]
-boto3 = "*"
-bs4 = "*"
-html5lib = "*"
-psycopg2 = "*"
-requests = "*"
-s3fs = "*"
-Django = "*"
-scrapy = "*"
-extruct = "*"
-pillow = "*"
-scrapy-splash = "*"
-babel = "*"
-gunicorn = "*"
-django-heroku = "*"
-dj-database-url = "*"
-django-filter = "*"
-django-crispy-forms = "*"
-tensorflow = "*"
-tensorflow-hub = "*"
-annoy = "*"
-django-picklefield = "*"
+boto3 = "==1.14.43"
+psycopg2 = "==2.8.5"
+requests = "==2.24.0"
+s3fs = "==0.4.2"
+Django = "==3.1"
+pillow = "==7.2.0"
+babel = "==2.8.0"
+gunicorn = "==20.0.4"
+dj-database-url = "==0.5.0"
+django-filter = "==2.3.0"
+django-crispy-forms = "==1.9.2"
+tensorflow = "==2.3.0"
+tensorflow-hub = "==0.8.0"
+annoy = "==1.16.3"
+django-picklefield = "==3.0.1"
 
 [requires]
 python_version = "3.7"
