--- a/app/Pipfile
+++ b/app/Pipfile
@@ -9,21 +9,22 @@ jupyter = "*"
 pandas = "*"
 
 [packages]
+annoy = "==1.16.3"
+babel = "==2.8.0"
 boto3 = "==1.14.43"
+dj-database-url = "==0.5.0"
+Django = "==3.1"
+django-crispy-forms = "==1.9.2"
+django-filter = "==2.3.0"
+django-picklefield = "==3.0.1"
+gunicorn = "==20.0.4"
+numpy="==1.18.5"
+pillow = "==7.2.0"
 psycopg2 = "==2.8.5"
 requests = "==2.24.0"
 s3fs = "==0.4.2"
-Django = "==3.1"
-pillow = "==7.2.0"
-babel = "==2.8.0"
-gunicorn = "==20.0.4"
-dj-database-url = "==0.5.0"
-django-filter = "==2.3.0"
-django-crispy-forms = "==1.9.2"
 tensorflow = "==2.3.0"
 tensorflow-hub = "==0.8.0"
-annoy = "==1.16.3"
-django-picklefield = "==3.0.1"
 
 [requires]
 python_version = "3.7"
