--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
 .git
 .ipynb_checkpoints
 app/Dockerfile
-app/docker-compose.yml
+docker-compose.yml
 db.sqlite3
 .DS_Store
 .gitignore
@@ -9,3 +9,6 @@ README.md
 venv/*
 *.csv
 *.ipynb
+Pipfile
+Pipfile.lock
+/.python-version
