--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,79 +1,58 @@
-django-filter
--i https://pypi.org/simple
-appnope==0.1.0 ; sys_platform == 'darwin'
-asgiref==3.2.3
-attrs==19.3.0
-automat==20.2.0
+absl-py==0.9.0
+annoy==1.16.3
+asgiref==3.2.10
+astunparse==1.6.3
 babel==2.8.0
-backcall==0.1.0
-beautifulsoup4==4.8.2
-boto3==1.12.9
-botocore==1.15.9
-bs4==0.0.1
-certifi==2019.11.28
-cffi==1.14.0
+boto3==1.14.43
+botocore==1.17.43
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-constantly==15.1.0
-cryptography==2.8
-cssselect==1.1.0
-decorator==4.4.1
 dj-database-url==0.5.0
-django-heroku==0.3.1
-django==3.0.3
+django==3.1
+django-crispy-forms==1.9.2
+django-filter==2.3.0
+django-picklefield==3.0.1
 docutils==0.15.2
-extruct==0.8.0
-fsspec==0.6.2
+fsspec==0.8.0
+gast==0.3.3
+google-auth==1.20.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.31.0
 gunicorn==20.0.4
-html-text==0.5.1
-html5lib==1.0.1
-hyperlink==19.0.0
-idna==2.9
-incremental==17.5.0
-ipython-genutils==0.2.0
-ipython==7.12.0
-isodate==0.6.0
-jedi==0.16.0
-jmespath==0.9.5
-lxml==4.5.0 ; python_version != '3.4'
-mf2py==1.1.2
-numpy==1.18.1
-pandas==1.0.1
-parsel==1.5.2
-parso==0.6.2
-pexpect==4.8.0 ; sys_platform != 'win32'
-pickleshare==0.7.5
-pillow==7.0.0
-prompt-toolkit==3.0.3
-protego==0.1.16
-psycopg2==2.8.4
-ptyprocess==0.6.0
-pyasn1-modules==0.2.8
+h5py==2.10.0
+idna==2.10
+importlib-metadata==1.7.0
+jmespath==0.10.0
+keras-preprocessing==1.1.2
+markdown==3.2.2
+numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
+pillow==7.2.0
+protobuf==3.13.0
+psycopg2==2.8.5
 pyasn1==0.4.8
-pycparser==2.19
-pydispatcher==2.0.5
-pygments==2.5.2
-pyhamcrest==2.0.1
-pyopenssl==19.1.0
-pyparsing==2.4.6
+pyasn1-modules==0.2.8
 python-dateutil==2.8.1
-pytz==2019.3
-queuelib==1.5.0
-rdflib-jsonld==0.4.0
-rdflib==4.2.2
-requests==2.23.0
-s3fs==0.4.0
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+s3fs==0.4.2
 s3transfer==0.3.3
-scrapy-splash==0.7.2
-scrapy==1.8.0
-service-identity==18.1.0
-six==1.14.0
-soupsieve==2.0
-sqlparse==0.3.0
-traitlets==4.3.3
-twisted==19.10.0 ; python_version >= '3.5'
-urllib3==1.25.8 ; python_version != '3.4'
-w3lib==1.21.0
-wcwidth==0.1.8
-webencodings==0.5.1
-whitenoise==5.0.1
-zope.interface==4.7.1
+scipy==1.4.1
+six==1.15.0
+sqlparse==0.3.1
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+tensorflow-hub==0.8.0
+termcolor==1.1.0
+urllib3==1.25.10
+werkzeug==1.0.1
+wheel==0.35.1
+wrapt==1.12.1
+zipp==3.1.0
