mount app in staging

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
+      - ./app:/home/app
     expose:
       - 8000
     env_file:
